@@ -71,6 +71,11 @@ subprojects { proj ->
     }
 
     proj.tasks.withType(JavaCompile) {
+        options.compilerArgs += [
+                "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+        ]
         if (!name.toLowerCase().contains("test")) {
             options.errorprone {
                 check("StringSplitter", CheckSeverity.OFF)
@@ -82,6 +87,14 @@ subprojects { proj ->
             }
         }
         options.fork = true
+    }
+
+    proj.tasks.withType(Javadoc) {
+        options.addMultilineStringsOption("-add-exports").setValue([
+                "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+        ])
     }
 
     repositories {
@@ -97,7 +110,7 @@ subprojects { proj ->
 
     spotless {
         java {
-            googleJavaFormat('1.24.0')
+            googleJavaFormat('1.28.0')
         }
     }
 }
